[package]
name = "spl_claim_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_claim_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version= "0.29.0" , features= ["init-if-needed"]}
anchor-spl = "0.29.0"
bytemuck = {version = "1.15.0",features =["derive","min_const_generics"]}
spl-associated-token-account = "2.3.1"